# 2023_Numerical_Analysis

Homework_1/: machar_for_double.c  main.c  makefile  nr.h
Homework_2/: Muller.c  Muller.h  main.c  makefile  runHW2  수치해석 과제2 레포트 2019061721 최성훈.hwp
Homework_3/: Homework3 보고서.hwp
Homework_3/problem1_gaussj/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  problem1_gaussj.c  runHW3_problem1_gaussj
Homework_3/problem1_ludcmp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  problem1_ludcmp.c  runHW3_problem1_ludcmp
Homework_3/problem1_svdcmp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  problem1_svdcmp.c  runHW3_problem1_svdcmp
Homework_3/problem2_mprove/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  problem2_mprove.c  runHW3_problem2
Homework_3/problem3_inverse,det/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  problem3_inverse,det.c  runHW3_problem3
Homework_4/: CMakeCache.txt  CMakeLists.txt  Homework4 보고서.hwp  Makefile  cmake_install.cmake  main.c  runHW4
Homework_5/: homework_5.py
Homework_6/: Homework_6.py
